fix: enable all the repo
